Project

General

Profile

Actions

Bug #6749

closed

rdoc of Time class (incorrect explanation of leap seconds)

Bug #6749: rdoc of Time class (incorrect explanation of leap seconds)

Added by stomar (Marcus Stollsteimer) about 14 years ago. Updated about 14 years ago.

Status:
Closed
Target version:
-
ruby -v:
ruby 1.9.3p243 (2012-06-28 revision 36244) [i686-linux]
Backport:
[ruby-core:46535]

Description

The patch fixes the documentation of Time#sec,
where an incorrect explanation of leap seconds is given.


Files

time_rdoc_explanation_of_leap_seconds.patch (860 Bytes) time_rdoc_explanation_of_leap_seconds.patch stomar (Marcus Stollsteimer), 07/18/2012 05:13 AM
Actions

Also available in: PDF Atom