* time.c (time_sec):  Updated description of leap seconds for accuracy.   Based on patch by Marcus Stollsteimer.  [Bug #6749]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@36507 b2dd03c8-39d4-4d8f-98ff-823fe69b080e